--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ferias
+application.vendor=Daniel
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,12 +33,15 @@ dist.jar=${dist.dir}/ferias.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ferias
+endorsed.classpath=
 excludes=
+file.reference.dom4j-1.6.1.jar=C:\\Users\\Daniel\\Desktop\\BuscaCep\\BuscaCep\\dom4j-1.6.1.jar
 file.reference.mysql-connector-java-5.1.47.jar=C:\\Users\\Daniel\\Documents\\Trabalho\\QualificaMais\\Programador de dispositivos m\u00f3veis\\Projeto\\mysql-connector-java-5.1.47\\mysql-connector-java-5.1.47.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.47.jar}
+    ${file.reference.mysql-connector-java-5.1.47.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -73,7 +77,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ferias
-main.class=
+main.class=br.com.ferias.view.frmFuncionario
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
